--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <meta name="theme-color" content="#000000">
         <meta name="description" content="Web site created using create-react-app">
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
+        <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -36,5 +37,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+        <script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('%PUBLIC_URL%/service-worker.js')
+        .then(registration => {
+          console.log('SW registered: ', registration);
+        })
+        .catch(registrationError => {
+          console.log('SW registration failed: ', registrationError);
+        });
+    });
+  }
+        </script>
     </body>
 </html>
